# bluerov_fiducial_localization

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  package.xml  setup.cfg  setup.py
.devcontainer/ros2/: Dockerfile  devcontainer.json
.docker/: Dockerfile  docker-compose.yml
bluerov_fiducial_localization/: fiducial_localization_node.py  fiducial_map.py  ros2_entrypoint.py
cfg/: sample_fiducial_map.yaml
launch/: fiducial_localization_launch.py
test/: test_flake8.py
