<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bluerov_fiducial_localization</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="amarburg@uw.edu">Aaron Marburg</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>python3-depthai-pip</exec_depend>
  <exec_depend>blue_localization</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>apriltag_msgs</exec_depend>
  <exec_depend>camera_info</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
